--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,18 +1,12 @@
 <div id="<%= dom_id category %>">
   <p>
     <strong>Name:</strong>
-    <%= link_to category.name, category_expenses_url(category) %>
+    <%= category.name %>
   </p>
 
   <p>
     <strong>Icon:</strong>
     <%= category.icon %>
   </p>
-
-  <p>
-    <strong>Total Amount:</strong>$
-    <%= category.total_amount(current_user) %>
-  </p>
-
 
 </div>
