--- a/app/views/expenses/_expense.html.erb
+++ b/app/views/expenses/_expense.html.erb
@@ -1,12 +1,12 @@
-<div id="<%= dom_id expense %>">
+<li id="<%= dom_id expense %>" class='expense-item'>
   <p>
     <strong>Name:</strong>
-    <%= expense.name %>
+    <%= link_to expense.name, category_expense_path(@category, expense) %>
   </p>
 
   <p>
     <strong>Amount:</strong>
-    <%= expense.amount %>
+      $<%= expense.amount %>
   </p>
 
-</div>
+</li>
