--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,5 +1,4 @@
-<%= form_with(model: expense, url: current_page?(new_category_expense_path) ?
-                      category_expenses_path(@category) : category_expense_path(@category, expense), method: :post) do |form| %>
+<%= form_with(model: expense, url: category_expenses_path(@category)) do |form| %>
   <% if expense.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
@@ -22,7 +21,7 @@
     <%= form.number_field :amount %>
   </div>
 
-  <div>
+  <div class='submit'>
     <%= form.submit %>
   </div>
 <% end %>
