--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -6,5 +6,5 @@
 
 <div>
   <%= link_to "Show this expense", category_expense_path(@category, @expense) %> |
-  <%= link_to "Back to expenses", category_expenses_path %>
+  <%= link_to "Back to expenses", category_expenses_path(@category) %>
 </div>
