--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New expense</h1>
+<div class='new-category'>
+  <h1>New expense</h1>
 
-<%= render "form", expense: @expense %>
+  <%= render "form", expense: @expense %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Back to expenses", category_expenses_path %>
+  <div class='back button-primary'>
+    <%= link_to "Back to expenses", category_expenses_path %>
+  </div>
 </div>
