--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @expense %>
 
 <div>
-  <%= link_to "Edit this expense", edit_category_expense_path(@category, @expense) %> |
+  <%= link_to "Edit this expense", edit_category_expense_path(@expense) %> |
   <%= link_to "Back to expenses", category_expenses_path %>
 
-  <%= button_to "Destroy this expense", category_expense_path(@category, @expense), method: :delete %>
+  <%= button_to "Destroy this expense", category_expense_path, method: :delete %>
 </div>
